deployments/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: restapi
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-management-ingress
spec:
  rules:
    - http:
        paths:
          - path: /mon/rabbit
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  name: http
