deployments/test/keycloak.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http-alt
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: "objectservice-keycloak"
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          env:
            - name: KEYCLOAK_IMPORT
              value: /root/test-realm.json
            - name: KEYCLOAK_USER
              value: admin
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: DB_VENDOR
              value: h2
          resources:  # TODO: tune
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /auth/realms/test
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 40
            periodSeconds: 5
